package com.GestionStock.GestionStock.model;


public enum EtatCommande {

        EN_PREPARATION,
        VALIDEE,
        LIVREE
}


