package com.GestionStock.GestionStock.model;

public enum SourceMvtStk {
    COMMANDE_CLIENT,
    COMMANDE_FOURNISSEUR,
    VENTE
}
