package com.GestionStock.GestionStock.model;

public enum TypeMvtStk {

    ENTREE, SORTIE, CORRECTION_POS, CORRECTION_NEG
}
